--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "laravel/tinker": "^2.10.1",
         "livewire/livewire": "^3.6.4",
         "maatwebsite/excel": "^3.1",
-        "spatie/laravel-permission": "^6.22"
+        "spatie/laravel-permission": "^6.22",
+        "stripe/stripe-php": "^19.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
